revise home page

--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : haitian-xie-136056b5
   orcid            : #https://orcid.org/0000-0003-4284-081X
   pinterest        :
   soundcloud       :
