change profile pic

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Haitian Xie"
-  avatar           : "profile.jpg"
+  avatar           : "profilepic0609.jpg"
   bio              : "Ph.D. Candidate"
   location         : #"San Diego, CA"
   employer         : UC San Diego
