--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,9 @@ main:
 
   - title: "Teaching"
     url: /teaching/    
+
+  - title: "Presentations"
+    url: /presentations/    
     
   - title: "CV"
     url: /cv/
