--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Haitian Xie (解海天)"
   avatar           : "profilepic0609.jpg"
-  bio              : "Economics PhD Candidate"
+  bio              : "PhD in Economics"
   location         : #"San Diego, CA"
   employer         : UC San Diego
   pubmed           : 
