update home page

--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Haitian Xie (解海天)"
   avatar           : "profilepic0609.jpg"
   bio              : "Assistant Professor"
-  location         : #"San Diego, CA"
-  employer         : Peking University
+  location         : "Beijing, China"
+  employer         : "Peking University"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=iMTE6PIAAAAJ"
   email            : xht@gsm.pku.edu.cn
